--- a/test.html
+++ b/test.html
@@ -6,11 +6,10 @@
     <title>About Me | Allan</title>
     <link rel="shortcut icon" href="https://github.com/fluidicon.png">
     <link href="/feed/" rel="alternate" title="Allan" type="application/atom+xml" />
-    <link rel="stylesheet" href="/media/css/style.css">
-    <link rel="stylesheet" href="/media/css/highlight.css">
     <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
   </head>
   <body>
-  Hello, I want to try this
+  <a class="twitter-timeline" href="https://twitter.com/YupingLu" data-widget-id="343285843491946496">Tweets by @YupingLu</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </body>
 </html>
