--- a/test.html
+++ b/test.html
@@ -1,15 +1,106 @@
+
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="Allan" />
-    <title>About Me | Allan</title>
-    <link rel="shortcut icon" href="https://github.com/fluidicon.png">
-    <link href="/feed/" rel="alternate" title="Allan" type="application/atom+xml" />
-    <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
-  </head>
-  <body>
-  <a class="twitter-timeline" href="https://twitter.com/YupingLu" data-widget-id="343285843491946496">Tweets by @YupingLu</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  </body>
-</html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>@stop's Twitter archive</title>
+  <meta name="description" content="All of the Tweets.">
+
+  <meta http-equiv="MSThemeCompatible" Content="No">
+  <meta name="MSSmartTagsPreventParsing" content="true">
+  <meta http-equiv="imagetoolbar" content="no">
+
+  <link href="https://si0.twimg.com/favicons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+  <link href="lib/twt/twt.min.css" rel="stylesheet">
+  <link href="css/application.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="icon-sprite icon-bird brand" href=""></a>
+        <ul id="primary-nav" class="nav"></ul>
+        <ul id="util-nav" class="nav pull-right">
+          <form class="navbar-search" rel="tooltip" data-placement="bottom" data-trigger="manual">
+            <input type="text" class="search-query span3" placeholder="Search">
+          </form>
+          <li class="divider-vertical"></li>
+          <li class="dropdown"></li>
+          <li class="divider-vertical"></li>
+          <li class="icon-sprite icon-compose compose" rel="tooltip" data-placement="bottom" data-original-title="Compose new Tweet">
+            <a href="https://twitter.com/intent/tweet?partner=archive" title="Compose new Tweet" target="_blank">
+              <span class="hidden-elements">Compose new Tweet</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="tweets-header-container">
+        <div class="tweets-header">
+          <h2 class="tweets-header-title truncated"></h2>
+          <a class="nav-arrow nav-arrow-left" data-idx="" rel="tooltip" data-placement="top">
+            <span class="hidden-elements">Previous month</span>
+          </a>
+          <a class="nav-arrow nav-arrow-right" data-idx="" rel="tooltip" data-placement="top">
+            <span class="hidden-elements">Next month</span>
+          </a>
+          <a class="nav-clear" rel="tooltip" data-placement="top" data-original-title="Clear search">
+            <span class="hidden-elements">Clear search</span>
+          </a>
+        </div>
+      </div>
+      <div class="contents span7">
+        <div class="tweets">
+        </div>
+      </div>
+
+      <div class="sidebar span4 offset7">
+        <div class="sidebar-nav">
+          <div class="content-nav"></div>
+          <div class="search-mask"></div>
+        </div>
+        <p class="footer muted">This is an archive of @stop's Tweets from Twitter. Use the months above to navigate the archive.</p>
+      </div>
+
+    </div>
+
+    <div id="user-info" class="modal fade">
+      <div class="modal-header">
+        <a class="close" data-dismiss="modal">&times;<span class="hidden-elements">Close</span></a>
+      </div>
+
+      <div class="modal-body row">
+        <div class="user-details"></div>
+      </div>
+
+      <div class="modal-footer">
+        <div class="account-details details-block pull-left">
+          <div class="stats"></div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <script src="lib/jquery/jquery-1.8.3.min.js"></script>
+  <script src="lib/underscore/underscore-min.js"></script>
+  <script src="lib/bootstrap/bootstrap-dropdown.js"></script>
+  <script src="lib/bootstrap/bootstrap-modal.js"></script>
+  <script src="lib/bootstrap/bootstrap-tooltip.js"></script>
+  <script src="lib/bootstrap/bootstrap-transition.js"></script>
+  <script src="lib/twt/twt.all.min.js"></script>
+  <script src="lib/hogan/hogan-2.0.0.min.js"></script>
+
+  <script src="js/application.min.js" charset="utf-8"></script>
+  <script src="data/js/tweet_index.js" charset="utf-8"></script>
+  <script src="data/js/user_details.js" charset="utf-8"></script>
+  <script src="data/js/payload_details.js" charset="utf-8"></script>
+</body>
