--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           <ul>
             <li><a href="http://www.eecs.utk.edu/">Department of Electrical Engineering &amp; Computer Science</a></li> 
             <li>PhD (in progress)</li>
-            <li><strong>Advisors</strong>: Dr. Michael Langston</li>
+            <li><strong>Advisor</strong>: Dr. Michael Langston</li>
           </ul>
 
           <h5 id="nanjing-agricultural-university"><a href="http://english.njau.edu.cn/">Nanjing Agricultural University</a></h5>
           <ul>
             <li>Bachelor of Engineering (May 2011)</li>
-            <li><strong>Majors</strong>: Computer Science</li>
+            <li><strong>Major</strong>: Computer Science</li>
             <li><strong>Advisor</strong>: Dr. Huanliang Xu</li>
           </ul>
 
