update shortcut icon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,300italic,700italic,700|Anonymous+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/theme.css" rel="stylesheet">
