--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
               Resume
             </a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link " href="/blog">
+              Blog
+            </a>
+          </li>
         
           <li class="nav-item">
             <a class="nav-link " href="http://github.com/YupingLu">
