--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <h2 id="research-interests">Research Interests</h2>
           <p>
             I am interested in graph algorithms and tools for biological data. Recently, I worked on clustering algorithm robustness. 
-            We compared different genome-scale clustering algorithms and we gave the definition of robustness as comparison metrics for these algorithms. According to our experiments, hierarchical clustering and paraclique have higher robustness than the others. Now, I'm working on the biclque enumeration R package. And I am also interested in deeping learning on graphs.
+            We compared different genome-scale clustering algorithms and we gave the definition of robustness as comparison metrics for these algorithms. According to our experiments, hierarchical clustering and paraclique have higher robustness than the others. Now, I'm working on the biclique enumeration R package. And I am also interested in deeping learning on graphs.
           </p>
 
           <h2 id="education">Education</h2>
