--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-sm-8">
           <h2 id="research-interests">Research Interests</h2>
-          <p class="text-center">
+          <p class="text-justify">
             I am interested in graph algorithms and tools for biological data. Recently, I worked on clustering algorithm robustness. 
             We compared different genome-scale clustering algorithms and we gave the definition of robustness as comparison metrics for these algorithms. According to our experiments, hierarchical clustering and paraclique have higher robustness than the others. Now, I'm working on the biclique enumeration R package. And I am also interested in deeping learning on graphs.
           </p>
@@ -92,7 +92,7 @@
         </div>
         <div class="col-sm-4">
           <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu">
-          <p class="text-center">
+          <p class="text-justify">
           Ages ago, in another city, on another bus, I sat so at the windows, looking outward, investing for each flying face which trapped my brief attention some life, some destiny, 
           in which I played a part.</p>
         </div>
