--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
         </div>
         <div class="col-sm-4">
           <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu">
-          <p class="text-justify">
-          Ages ago, in another city, on another bus, I sat so at the windows, looking outward, investing for each flying face which trapped my brief attention some life, some destiny, 
-          in which I played a part.</p>
+          <p class="text-justify text-primary">
+            <em>Ages ago, in another city, on another bus, I sat so at the windows, looking outward, investing for each flying face which trapped my brief attention some life, some destiny, 
+          in which I played a part.</em>
+          </p>
         </div>
       </div>
 
