--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         </div>
         <div class="col-sm-4">
-          <!--<img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu" width="236" height="296">-->
+          <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu" width="237" height="297">
           <br/>
           <br/>
           <p class="text-justify">
