--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </p>
 
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-md-8">
           <h2 id="research-interests">Research Interests</h2>
           <p>
             I am interested in graph algorithms and tools for biological data. Recently, I worked on clustering algorithm robustness. 
@@ -90,7 +90,7 @@
           </ul>
 
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu" width="236" height="296">
           <br/>
           <br/>
