--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Yuping Lu / The Road Not Taken</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@YupingLu">
     <meta name="twitter:creator" content="@YupingLu">
