--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <h3 id="publications">Publications</h3>
 
-    <h4 id="conference-papers">Journal Papers</h4>
+    <h4 id="journal-papers">Journal Papers</h4>
     <ul>
       <li>
         <div class="pub">
@@ -156,7 +156,7 @@
       </li>
     </ul>
 
-    <h4 id="workshop-papers">Posters</h4>
+    <h4 id="posters">Posters</h4>
     <ul>
       <li>
         <div class="pub">
@@ -174,6 +174,17 @@
         </div>
       </li>
 
+    <h4 id="student-volunteer">Student Volunteer</h4>
+    <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            XSEDE14 : Atlanta, GA, USA. July 13-18, 2014
+            </a>
+          </strong><br/>
+        </div>
+      </li>
         
     </ul>
 
