--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
       <li>
         <div class="pub">
           <strong>
-            <a href="#" class="pub-title">
+            <a href="https://www.xsede.org/" class="pub-title">
             XSEDE14 : Atlanta, GA, USA. July 13-18, 2014
             </a>
-          </strong><br/>
+          </strong>
         </div>
       </li>
     </ul>
