--- a/index.html
+++ b/index.html
@@ -183,7 +183,10 @@
             <a href="https://www.xsede.org/" class="pub-title">
             XSEDE14 : Atlanta, GA, USA. July 13-18, 2014
             </a>
-          </strong>
+          </strong><br/>
+          <span class="pub">
+            <a href="https://www.xsede.org/"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
         </div>
       </li>
     </ul>
