--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
     </div>
 
     <div>
-      <strong>Oak Ridge National Laboratory</strong> — <em>Intern at the Scientific Data Group</em> — Summer 2016
+      <strong>Oak Ridge National Laboratory</strong> — <em>Intern at the Scientific Data Group</em> — Summer 2017, Summer 2016
       <ul>
-        <li>Worked on pbdADIOS project.</li>
-        <li>pbdADIOS is an package to connect R with ADIOS parallel middleware for IO.</li>
-        <li>Most functions in this package are implemented with C++.</li>
+        <li>Scaling a PheWAS logistic regression R code on a cluster computer with pbdR tools in a parallel package, 2017.</li>
+        <li>Implemented an R package pbdADIOS to connect R with ADIOS parallel middleware for IO, 2016.</li>
+        <li>Most functions in pbdADIOS are implemented with C++.</li>
       </ul>
     </div>
 
@@ -192,7 +192,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2017 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2017-03-10</p>
+      <p>&copy; 2017 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2017-07-17</p>
     </div>
   </div>
 
