--- a/index.html
+++ b/index.html
@@ -155,6 +155,28 @@
           </span>
         </div>
       </li>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            Robustness of Clustering Algorithms
+            </a>
+          </strong><br/>
+          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a>/span> — To be submitted<br/>
+        </div>
+      </li>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            biclique: Maximal Biclique Enumeration in Bipartite Graphs
+            </a>
+          </strong><br/>
+          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a>/span> — To be submitted<br/>
+        </div>
+      </li>
     </ul>
 
     <h4 id="posters">Posters</h4>
