--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link href="/css/latofonts.css" rel="stylesheet" type="text/css">
   <link href="/css/latolatinfonts.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <script language="javascript">
+    if (navigator.appVersion.indexOf("Win")!=-1) 
+    {
+      $(body).css('font-weight','400');
+    } else {
+      $(body).css('font-weight','300'); // this will style body for other OS (Linux/Mac)
+    }
+  </script>
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
   <link href="/css/index.css" rel="stylesheet">
 </head>
