--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
   <link href="/css/index.css" rel="stylesheet">
-  <script language="javascript">
-    if (navigator.appVersion.indexOf("Win")!=-1) 
+  <script type="text/javascript"> 
+    if(navigator.appVersion.indexOf("Win") != -1) 
     {
       $(body).css('font-weight','400');
     }
