--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript"> 
     if(navigator.appVersion.indexOf("Win") != -1) 
     {
-      $(body).css('font-weight','400');
+      $(body).css("font-weight","400");
     }
   </script>
 </head>
