--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <script type="text/javascript"> 
     if(navigator.appVersion.indexOf("Win") != -1) 
     {
-      $(body).css("font-weight","400");
+      $("#wd").css("font-weight","400");
     }
   </script>
 </head>
-<body>
+<body id="bw">
   <!-- You can put google analytics here -->
   <div class="container">
     <div class="header">
