--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
   <link href="/css/latofonts.css" rel="stylesheet" type="text/css">
   <link href="/css/latolatinfonts.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
   <link href="/css/index.css" rel="stylesheet">
   <script type="text/javascript"> 
     if(navigator.appVersion.indexOf("Win") != -1) 
     {
-      $(body).css("font-weight","400");
+      document.getElementById("bw").style.fontWeight = "400";
     }
   </script>
 </head>
-<body>
+<body id="bw">
   <!-- You can put google analytics here -->
   <div class="container">
     <div class="header">
