--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
   <link href="/css/latolatinfonts.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
-  <link href="/css/index.css" rel="stylesheet">
+  <!--<link href="/css/index.css" rel="stylesheet">-->
   <script type="text/javascript"> 
-    if(navigator.appVersion.indexOf("Win") != -1) 
+    function loadjscssfile(filename){
+        var fileref=document.createElement("link")
+        fileref.setAttribute("rel", "stylesheet")
+        fileref.setAttribute("type", "text/css")
+        fileref.setAttribute("href", filename)
+    }
+  
+    if(navigator.appVersion.indexOf("Win")!=-1) 
     {
-      document.getElementById("bw").style.fontWeight = "400";
+        loadjscssfile("css/win-index.css");
+    }else {
+        loadjscssfile("css/index.css");
     }
   </script>
 </head>
