--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
   <!--<link href="/css/index.css" rel="stylesheet">-->
   <script type="text/javascript"> 
-    function loadjscssfile(filename){
-        var fileref=document.createElement("link")
-        fileref.setAttribute("rel", "stylesheet")
-        fileref.setAttribute("type", "text/css")
-        fileref.setAttribute("href", filename)
-    }
-  
+    function loadcss(url) {
+     var head = document.getElementsByTagName('head')[0],
+     link = document.createElement('link');
+     link.type = 'text/css';
+     link.rel = 'stylesheet';
+     link.href = url;
+     head.appendChild(link);
+     return link;
+   }
     if(navigator.appVersion.indexOf("Win")!=-1) 
     {
-        loadjscssfile("css/win-index.css");
+        loadcss("css/win-index.css");
     }else {
-        loadjscssfile("css/index.css");
+        loadcss("css/index.css");
     }
   </script>
 </head>
