--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
   </script>
 </head>
-<body id="bw">
+<body>
   <!-- You can put google analytics here -->
   <div class="container">
     <div class="header">
