--- a/index.html
+++ b/index.html
@@ -120,9 +120,17 @@
     </ul>
 
     <h3 id="research-and-work-experience">Research and Work Experience</h3>
-
     <div>
-      <strong>University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Office of Information Technology</em> — July 2014-Present
+      <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-Present
+      <ul>
+        <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Jitendra Kumar</a></li>
+        <li>Anomaly Detection</li>
+        <li>Data Processing</li>
+      </ul>
+    </div>
+    
+    <div>
+      <strong>University of Tennessee, Knoxville</strong> — <em>Graduate Research Assistant at Office of Information Technology</em> — July 2014-October 2017
       <ul>
         <li>Administration and implementation of Google Search Appliance.</li>
         <li>Configuration and administration of campus web servers.</li>
