Update Personal Website

--- a/index.html
+++ b/index.html
@@ -167,6 +167,40 @@
 
     <h3 id="publications">Publications</h3>
 
+    <h4 id="conference-papers">Conference Papers</h4>
+    <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            A Robustness Metric for Biological Data Clustering Algorithms
+            </a>
+          </strong><br/>
+          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
+          <span class="venue"><a href="http://alan.cs.gsu.edu/isbra18/">ISBRA 2018</a></span> — Submitted<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            Paraclique: A clique finding algorithm for weighted graph
+            </a>
+          </strong><br/>
+          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
+          <span class="venue"><a href="http://acm-bcb.org/">ACM-BCB 2018</a></span> — To be submitted<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
+    </ul>
+
     <h4 id="journal-papers">Journal Papers</h4>
     <ul>
       <li>
@@ -181,21 +215,6 @@
           <span class="pub">
             <a href="/files/mpmi-05-11-0106.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="http://apsjournals.apsnet.org/doi/abs/10.1094/MPMI-05-11-0106"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
-          </span>
-        </div>
-      </li>
-      <li>
-        <div class="pub">
-          <strong>
-            <a href="#" class="pub-title">
-            Robustness of Clustering Algorithms
-            </a>
-          </strong><br/>
-          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — To be submitted<br/>
-          <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
@@ -251,8 +270,38 @@
       </li>
     </ul>
 
+    <h4 id="professional-activities">Professional Activities</h4>
+    <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="/files/FAW2015.pdf" class="pub-title">
+            Reviwer for FAW 2015.
+            </a>
+          </strong><br/>
+          <span class="pub">
+            <a href="/files/FAW2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
+            <a href="https://link.springer.com/book/10.1007/978-3-319-19647-3"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+          </span>
+        </div>
+      </li>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="/files/WALCOM2015.pdf" class="pub-title">
+            Reviwer for WALCOM 2015.
+            </a>
+          </strong><br/>
+          <span class="pub">
+            <a href="/files/WALCOM2015.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
+            <a href="https://link.springer.com/book/10.1007%2F978-3-319-15612-5"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+          </span>
+        </div>
+      </li>
+    </ul>
+
     <div class="footer">
-      <p>&copy; 2017 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2017-07-30</p>
+      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-03-12</p>
     </div>
   </div>
 
