Update paper titles

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            Paraclique: A clique finding algorithm for weighted graph
+            Paraclique: A Clique Finding Algorithm for Weighted Graph
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
@@ -207,7 +207,7 @@
         <div class="pub">
           <strong>
             <a href="/files/mpmi-05-11-0106.pdf" class="pub-title">
-            Digital gene expression profiling of the Phytophthora sojae transcriptome
+            Digital Gene Expression Profiling of the Phytophthora Sojae Transcriptome
             </a>
           </strong><br/>
           Wenwu Ye, Xiaoli Wang, Kai Tao, Yuping Lu, Tingting Dai, Suomeng Dong, Daolong Dou, Mark Gijzen, Yuanchao Wang<br/>
@@ -222,7 +222,7 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            biclique: Maximal Biclique Enumeration in Bipartite Graphs
+            Biclique: Maximal Biclique Enumeration in Bipartite Graphs
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
