--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
       </li>
     </ul>
 
-    <h4 id="professional-activities">Professional Activities</h4>
+    <h4 id="professional-service">Professional Service</h4>
     <ul>
       <li>
         <div class="pub">
           <strong>
             <a href="/files/FAW2015.pdf" class="pub-title">
-            Reviwer for FAW 2015.
+            Reviwer, 9th International Workshop on Frontiers in Algorithmics, FAW 2015.
             </a>
           </strong><br/>
           <span class="pub">
@@ -289,7 +289,7 @@
         <div class="pub">
           <strong>
             <a href="/files/WALCOM2015.pdf" class="pub-title">
-            Reviwer for WALCOM 2015.
+            Reviwer, 9th International Workshop on Algorithms and Computation, WALCOM 2015.
             </a>
           </strong><br/>
           <span class="pub">
