--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
             Resume
           </a>
         </li>
-
+        
+        <li class="nav-item">
+          <a class="nav-link " href="https://scholar.google.com/citations?user=voz6I7kAAAAJ&hl=en">
+            Google Scholar
+          </a>
+        </li>
+        
         <!--<li class="nav-item">
           <a class="nav-link " href="/blog">
             Blog
