--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="/files/yupinglu.resume.pdf">
+          <a class="nav-link " href="/files/yupinglu.resume.r.pdf">
             Resume
           </a>
         </li>
