--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="http://alan.cs.gsu.edu/isbra18/">ISBRA 2018</a></span> — Submitted<br/>
+          <span class="venue"><a href="http://alan.cs.gsu.edu/isbra18/">ISBRA 2018</a></span> — Accepted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
