--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -9,6 +9,7 @@
   <link href="../css/latofonts.css" rel="stylesheet" type="text/css">
   <link href="../css/latolatinfonts.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href="timeline.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
   <!--<link href="/css/index.css" rel="stylesheet">-->
   <script type="text/javascript"> 
@@ -79,6 +80,89 @@
       <a href="https://github.com/YupingLu"><i class="fa fa-github"></i> YupingLu</a> |
       <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a>
     </p>
+
+    <h3 id="title">Clustering Metric, Weighted Graph Algorithm and Singular Spectrum Method for the Analysis of Scientific Data</h3>
+    <h5 id="university-of-tennessee">A Dissertation Proposal by: Yuping Lu (Allan)</h5>
+    <br/>
+    <h4 id="honors">PhD Committee Members</h4>
+    <ul>
+      <li><a href="http://web.eecs.utk.edu/~langston/">Dr. Michael Langston</a>, Advisor, Profess at UTK</li>
+      <li><a href="https://climatechangescience.ornl.gov/content/jitendra-kumar">Dr. Jitendra Kumar</a>, Mentor, Research Scientist at ORNL</li>
+      <li><a href="http://web.eecs.utk.edu/~qcao1/">Dr. Qing “Charles” Cao</a>, Profess at UTK</li>
+      <li><a href="http://web.eecs.utk.edu/~audris/">Dr. Audris Mockus</a>, Profess at UTK</li>
+    </ul>
+
+    <!--TimeLine
+      ================================================== -->
+    <div class="timecontainer">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="timeline">
+            <dl>
+              <dt>2018</dt>
+              <dd class="pos-right clearfix">
+                <div class="circ"></div>
+                <div class="time">April 2</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="UT.jpg">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">PhD Dissertation Proposal</h4>
+                    <p>PhD committee formation signatures</p>
+                    <p>Admission to Candidacy</p>
+                  </div>
+                </div>
+              </dd>
+              <dd class="pos-left clearfix">
+                <div class="circ"></div>
+                <div class="time">March 24</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="isbra.jpg">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Paper Accepted by ISBRA2018</h4>
+                    <p>A Robustness Metric for Biological Data Clustering Algorithms</p>
+                    <p>Yuping Lu, Charles A. Phillips, Michael A. Langston</p>
+                  </div>
+                </div>
+              </dd>
+              <dt>2017</dt>
+              <dd class="pos-right clearfix">
+                <div class="circ"></div>
+                <div class="time">May 7</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="R.png">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Biclique submitted to CRAN</h4>
+                    <p>A tool for enumerating maximal complete bipartite graphs.</p>
+                  </div>
+                </div>
+              </dd>
+              <dt>2013</dt>
+              <dd class="pos-left clearfix">
+                <div class="circ"></div>
+                <div class="time">August 6</div>
+                <div class="events">
+                  <div class="pull-left">
+                    <img class="events-object img-rounded" src="UT.jpg">
+                  </div>
+                  <div class="events-body">
+                    <h4 class="events-heading">Started PhD program at UTK</h4>
+                    <p>Department of Electrical Engineering & Computer Science</p>
+                    <p>Advisor: Dr. Michael Langston</p>
+                    <p>Research Topic: Combinatorial Algorithms, Graph Metrics, Outlier Detection</p>
+                  </div>
+                </div>
+              </dd>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="footer">
       <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-04-01</p>
