--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -86,10 +86,10 @@
     <br/>
     <h4 id="honors">PhD Committee Members</h4>
     <ul>
-      <li><a href="http://web.eecs.utk.edu/~langston/">Dr. Michael Langston</a>, Advisor, Profess at UTK</li>
+      <li><a href="http://web.eecs.utk.edu/~langston/">Dr. Michael Langston</a>, Advisor, Professor at UTK</li>
       <li><a href="https://climatechangescience.ornl.gov/content/jitendra-kumar">Dr. Jitendra Kumar</a>, Mentor, Research Scientist at ORNL</li>
-      <li><a href="http://web.eecs.utk.edu/~qcao1/">Dr. Qing “Charles” Cao</a>, Profess at UTK</li>
-      <li><a href="http://web.eecs.utk.edu/~audris/">Dr. Audris Mockus</a>, Profess at UTK</li>
+      <li><a href="http://web.eecs.utk.edu/~qcao1/">Dr. Qing “Charles” Cao</a>, Professor at UTK</li>
+      <li><a href="http://web.eecs.utk.edu/~audris/">Dr. Audris Mockus</a>, Professor at UTK</li>
     </ul>
 
     <!--TimeLine
