update index page

--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -82,7 +82,7 @@
     </p>
 
     <h3 id="title">Clustering Metric, Weighted Graph Algorithm and Singular Spectrum Method for the Analysis of Scientific Data</h3>
-    <h5 id="university-of-tennessee">A Dissertation Proposal by: Yuping Lu (Allan)</h5>
+    <h5 id="university-of-tennessee">A PhD Dissertation by: Yuping Lu (Allan)</h5>
     <br/>
     <h4 id="honors">PhD Committee Members</h4>
     <ul>
