add dissertation link

--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -78,7 +78,8 @@
     <p class="contact">
       <a href="mailto:yupinglu89@gmail.com"><i class="fa fa-envelope-o"></i> yupinglu89@gmail.com</a> |
       <a href="https://github.com/YupingLu"><i class="fa fa-github"></i> YupingLu</a> |
-      <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a>
+      <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a> |
+      <a href="http://yupinglu.me/dissertation/">Dissertation</a>
     </p>
 
     <h3 id="title">Clustering Metric, Weighted Graph Algorithm and Singular Spectrum Method for the Analysis of Scientific Data</h3>
