--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <p class="contact">
       <a href="mailto:yupinglu89@gmail.com"><i class="fa fa-envelope-o"></i> yupinglu89@gmail.com</a> |
       <a href="https://github.com/YupingLu"><i class="fa fa-github"></i> YupingLu</a> |
-      <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a>
+      <a href="https://twitter.com/YupingLu"><i class="fa fa-twitter"></i> @YupingLu</a> |
+      <a href="http://yupinglu.me/dissertation/">Dissertation</a>
     </p>
 
     <div class="row">
