--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -9,7 +9,7 @@
   <link href="../css/latofonts.css" rel="stylesheet" type="text/css">
   <link href="../css/latolatinfonts.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link href="timeline.css" rel="stylesheet" type="text/css">
+  <link href="../css/timeline.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="http://www.utk.edu/favicon.ico">
   <!--<link href="/css/index.css" rel="stylesheet">-->
   <script type="text/javascript"> 
@@ -110,8 +110,9 @@
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">PhD Dissertation Proposal</h4>
-                    <p>PhD committee formation signatures</p>
+                    <p><a href="../files/DocComApt_signed.pdf">PhD committee formation signatures</a></p>
                     <p>Admission to Candidacy</p>
+                    <p><a href="../files/proposal.pptx">Slides</a></p>
                   </div>
                 </div>
               </dd>
@@ -120,7 +121,7 @@
                 <div class="time">March 24</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="isbra.jpg">
+                    <img class="events-object img-rounded" src="../img/isbra.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Paper Accepted by ISBRA2018</h4>
@@ -135,7 +136,7 @@
                 <div class="time">May 7</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="R.png">
+                    <img class="events-object img-rounded" src="../img/R.png">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Biclique submitted to CRAN</h4>
@@ -149,7 +150,7 @@
                 <div class="time">August 6</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="UT.jpg">
+                    <img class="events-object img-rounded" src="../img/UT.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">Started PhD program at UTK</h4>
