--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -106,7 +106,7 @@
                 <div class="time">April 2</div>
                 <div class="events">
                   <div class="pull-left">
-                    <img class="events-object img-rounded" src="UT.jpg">
+                    <img class="events-object img-rounded" src="../img/UT.jpg">
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">PhD Dissertation Proposal</h4>
