add candidacy form

--- a/dissertation/index.html
+++ b/dissertation/index.html
@@ -110,8 +110,8 @@
                   </div>
                   <div class="events-body">
                     <h4 class="events-heading">PhD Dissertation Proposal</h4>
-                    <p><a href="../files/DocComApt_signed.pdf">PhD committee formation signatures</a></p>
-                    <p>Admission to Candidacy</p>
+                    <p><a href="../files/phd_committee.pdf">PhD committee formation signatures</a></p>
+                    <p><a href="../files/candidacy.pdf">Admission to Candidacy</a></p>
                     <p><a href="../files/proposal.pptx"><i class="fa fa-file-powerpoint-o" aria-hidden="true"></i> Slides</a></p>
                   </div>
                 </div>
