--- a/index.html
+++ b/index.html
@@ -261,6 +261,23 @@
       </li>
     </ul>
 
+    <h4 id="posters">Talks</h4>
+    <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="/files/ARM-yl.pdf" class="pub-title">
+            Outlier Detection for SGPMET Data
+            </a>
+          </strong><br/>
+          Oak Ridge National Labs, 4 April 2018<br/>
+          <span class="pub">
+            <a href="/files/ARM-yl.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+          </span>
+        </div>
+      </li>
+    </ul>
+
     <h4 id="professional-service">Professional Service</h4>
     <ul>
       <li>
