--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             Outlier Detection for SGPMET Data
             </a>
           </strong><br/>
-          Oak Ridge National Labs, 4 April 2018<br/>
+          Oak Ridge National Labs, April 04, 2018<br/>
           <span class="pub">
             <a href="/files/ARM-yl.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
           </span>
