Update poster info

--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
         <div class="pub">
           <strong>
             <a href="/files/bio2016.pdf" class="pub-title">
-            Proceedings of the 15th Annual UT-KBRIN Bioinformatics Summit 2016: Cadiz, KY, USA. 8-10 April 2016
+            Enrichment vs robustness: A comparison of transcriptomic data clustering metrics
             </a>
           </strong><br/>
           Yuping Lu, Charles A Phillips, Michael A Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 17(S10), August 2016<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — 17(Suppl 10):P10, August 2016<br/>
           <span class="pub">
             <a href="/files/bio2016.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> |
             <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-016-1154-y"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
