--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="pub">
           <strong>
             <a href="/files/bio2016.pdf" class="pub-title">
-            Enrichment vs robustness: A comparison of transcriptomic data clustering metrics
+            Enrichment vs Robustness: A Comparison of Transcriptomic Data Clustering Metrics
             </a>
           </strong><br/>
           Yuping Lu, Charles A Phillips, Michael A Langston<br/>
