--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
     <h4 id="honors">Honors</h4>
     <ul>
+      <li>GSS Travel Award, the University of Tennessee, Knoxville (2018)</li>
       <li>Department excellence award, the University of Tennessee, Knoxville (2013)</li>
       <li>Outstanding graduate and several scholarships, Nanjing Agricultural University (2007-2011)</li>
     </ul>
