--- a/index.html
+++ b/index.html
@@ -85,11 +85,7 @@
       <div class="col-sm-8 col-md-8">
         <h3 id="research-interests">Research Interests</h3>
         <p>
-          I am interested in graph algorithms and tools for biological data. Recently, I worked on clustering algorithm robustness. 
-          We compared different genome-scale clustering algorithms and we gave the definition of robustness as comparison metrics for 
-          these algorithms. According to our experiments, hierarchical clustering and paraclique have higher robustness than the others. 
-          I also worked on a biclique enumeration R package. You can download it <a href="https://github.com/YupingLu/biclique">here</a>. 
-          And I am also interested in machine learning and deeping learning.
+          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems.
         </p>
 
         <h3 id="education">Education</h3>
@@ -132,8 +128,8 @@
       <strong>Oak Ridge National Laboratory</strong> — <em>Graduate Research Assistant at ARM Data Center</em> — October 2017-Present
       <ul>
         <li>Mentor: <a href="https://www.climatemodeling.org/~jkumar/">Jitendra Kumar</a></li>
-        <li>Anomaly Detection</li>
-        <li>Data Processing</li>
+        <li>Outlier Detection</li>
+        <li>Data Classification</li>
       </ul>
     </div>
     
@@ -326,7 +322,7 @@
     </ul>
 
     <div class="footer">
-      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-04-04</p>
+      <p>&copy; 2018 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2018-07-21</p>
     </div>
   </div>
 
