--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="col-sm-8 col-md-8">
         <h3 id="research-interests">Research Interests</h3>
         <p>
-          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems.
+          I am interested in developing graph algorithms and tools for biological data. My recent biclique enumeration R package can be downloaded <a href="https://github.com/YupingLu/biclique">here</a>. I am also interested in using data mining and machine learning methods to solve scientific data problems. My upcoming project is Radar data classification.
         </p>
 
         <h3 id="education">Education</h3>
@@ -177,11 +177,30 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            A Robustness Metric for Biological Data Clustering Algorithms
+            Detecting outliers in streaming time series data from ARM distributed sensors
+            </a>
+          </strong><br/>
+          Yuping Lu, Jitendra Kumar, Nathan Collier, Michael A. Langston<br/>
+          <span class="venue"><a href="https://www.climatemodeling.org/workshops/dmess2018/">DMESS 2018</a></span> — To be submitted<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
+    </ul>
+
+    <h4 id="journal-papers">Journal Papers</h4>
+    <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            Biclique: Maximal Biclique Enumeration in Bipartite Graphs
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="http://alan.cs.gsu.edu/isbra18/">ISBRA 2018</a></span> — Accepted<br/>
+          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — To be submitted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
@@ -196,17 +215,28 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="http://acm-bcb.org/">ACM-BCB 2018</a></span> — To be submitted<br/>
+          <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — To be submitted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
-    </ul>
-
-    <h4 id="journal-papers">Journal Papers</h4>
-    <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="#" class="pub-title">
+            A Robustness Metric for Biological Data Clustering Algorithms
+            </a>
+          </strong><br/>
+          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — To appear<br/>
+          <span class="pub">
+            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
@@ -219,21 +249,6 @@
           <span class="pub">
             <a href="/files/mpmi-05-11-0106.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="http://apsjournals.apsnet.org/doi/abs/10.1094/MPMI-05-11-0106"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
-          </span>
-        </div>
-      </li>
-      <li>
-        <div class="pub">
-          <strong>
-            <a href="#" class="pub-title">
-            Biclique: Maximal Biclique Enumeration in Bipartite Graphs
-            </a>
-          </strong><br/>
-          Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — To be submitted<br/>
-          <span class="pub">
-            <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
-            <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
           </span>
         </div>
       </li>
@@ -260,6 +275,19 @@
 
     <h4 id="posters">Talks</h4>
     <ul>
+      <li>
+        <div class="pub">
+          <strong>
+            <a href="/files/robustness.pdf" class="pub-title">
+            A Robustness Metric for Biological Data Clustering Algorithms
+            </a>
+          </strong><br/>
+          ISBRA 2018, Beijing, China, June 10, 2018<br/>
+          <span class="pub">
+            <a href="/files/isbra2018proceedings.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+          </span>
+        </div>
+      </li>
       <li>
         <div class="pub">
           <strong>
