--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
           <li><strong>Advisor</strong>: Dr. Huanliang Xu</li>
         </ul>
 
+        <h4 id="honors">Honors</h4>
+        <ul>
+          <li>GSS Travel Award, the University of Tennessee, Knoxville (2018)</li>
+          <li>Department excellence award, the University of Tennessee, Knoxville (2013)</li>
+          <li>Outstanding graduate and several scholarships, Nanjing Agricultural University (2007-2011)</li>
+        </ul>
+
       </div>
       <div class="col-sm-4 col-md-4">
         <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu">
@@ -115,13 +122,6 @@
         </p>
       </div>
     </div>
-
-    <h4 id="honors">Honors</h4>
-    <ul>
-      <li>GSS Travel Award, the University of Tennessee, Knoxville (2018)</li>
-      <li>Department excellence award, the University of Tennessee, Knoxville (2013)</li>
-      <li>Outstanding graduate and several scholarships, Nanjing Agricultural University (2007-2011)</li>
-    </ul>
 
     <h3 id="research-and-work-experience">Research and Work Experience</h3>
     <div>
@@ -177,7 +177,7 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            Detecting outliers in streaming time series data from ARM distributed sensors
+            Detecting Outliers in Streaming Time Series Data from ARM Distributed Sensors
             </a>
           </strong><br/>
           Yuping Lu, Jitendra Kumar, Nathan Collier, Michael A. Langston<br/>
@@ -254,7 +254,7 @@
       </li>
     </ul>
 
-    <h4 id="posters">Posters</h4>
+    <h4 id="posters">Posters & Short Papers</h4>
     <ul>
       <li>
         <div class="pub">
@@ -278,13 +278,13 @@
       <li>
         <div class="pub">
           <strong>
-            <a href="/files/robustness.pdf" class="pub-title">
+            <a href="/files/isbra2018proceedings.pdf" class="pub-title">
             A Robustness Metric for Biological Data Clustering Algorithms
             </a>
           </strong><br/>
           ISBRA 2018, Beijing, China, June 10, 2018<br/>
           <span class="pub">
-            <a href="/files/isbra2018proceedings.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
+            <a href="/files/robustness.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Slides</a>
           </span>
         </div>
       </li>
