--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="pub">
           <strong>
             <a href="#" class="pub-title">
-            Paraclique: A Clique Finding Algorithm for Weighted Graph
+            Improving Paraclique Cluster Quality by Starting Clique Selection
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
@@ -230,7 +230,7 @@
             </a>
           </strong><br/>
           Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
-          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — To appear<br/>
+          <span class="venue"><a href="https://bmcbioinformatics.biomedcentral.com/">BMC Bioinformatics</a></span> — To be submitted<br/>
           <span class="pub">
             <a href="#"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
             <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
